# BenchWeaver

./: .gitignore  README.md  TODO.md  pyproject.toml  test.py  老師討論.md
config/: evaluation.yaml  huatuo_test.yaml  industryinstruction_test.yaml  test.yaml  test_endpoint.yaml
config/gpqa/: opqa.yaml
config/trans_template_exp/: cmmlu.yaml  cmmlu_few_shot.yaml  cmmlu_general.yaml  cmmlu_mix.yaml  cmmlu_prop.yaml  kmmlu.yaml  kmmlu_few_shot.yaml  kmmlu_general.yaml  kmmlu_mix.yaml  kmmlu_prop.yaml  tmmlu.yaml  tmmlu_few_shot.yaml  tmmlu_general.yaml  tmmlu_mix.yaml  tmmlu_prop.yaml
doc/: add_benchmark.md  benchmark.md  benchmark_classification.md  cli.md  config_doc.md  data.md  evaluation_method.md  model_usage_method.md  problem_record.md  supported_benchmark.md
evaluation_data/arc-challenge/: arc-challenge.py  mapping.json
evaluation_data/awesome-taiwan-knowledge/: awesome-taiwan-knowledge.py
evaluation_data/big-bench-hard/: big-bench-hard.py  mapping.json
evaluation_data/c3/: c3.py  mapping.json
evaluation_data/ccpm/: README.md  ccpm.py  mmlu.py
evaluation_data/chinese-safety-qa/: chinese-safety-qa.py  mapping.json
evaluation_data/cif-bench/: README.md  cif-bench.py  mapping.json  mapping_v2.json
evaluation_data/click/: click.py  mapping.json
evaluation_data/cmath/: cmath.py  mapping.json
evaluation_data/cmmlu/: cmmlu.py  mapping.json
evaluation_data/drcd/: drcd.py
evaluation_data/flores-plus/: README.md  flores-plus.py  mapping.json
evaluation_data/gpqa/: gpqa.py  mapping.json
evaluation_data/gsm8k/: gsm8k.py  mapping.json
evaluation_data/hae-rae-bench/: hae-rae-bench.py  mapping.json
evaluation_data/hellaswag/: README.md  hellaswag.py
evaluation_data/ifeval/: ifeval.py  mapping.json
evaluation_data/kmmlu/: kmmlu.py  mapping.json
evaluation_data/kmmlu-hard/: kmmlu-hard.py
evaluation_data/kobest/: kobest.py  mapping.json
evaluation_data/logickor/: logickor.py  mapping.json
evaluation_data/mbpp/: mapping.json  mbpp.py
evaluation_data/medmcqa/: README.md  medmcqa.py
evaluation_data/medqa/: medqa.py
evaluation_data/mmlu/: mmlu.py
evaluation_data/mt-bench-tw/: mapping.json  mt-bench-tw.py  processed-data.jsonl
evaluation_data/taide-bench/: mapping.json  taide-bench.py
evaluation_data/tmlu/: mapping.json  tmlu.py
evaluation_data/tmmluplus/: mapping.json  tmmluplus.py
example_data/: local_test_data.json
prompt/: translation_prompt.json
record/: 0302逐字稿.txt  TODO.md  Update.md  老師討論.md
scripts/: add_benchmark.ipynb  annotation_gradio.py  code_testing.ipynb  eval_translation.py  graph_plotting.ipynb  hf_dataset_test.ipynb  mxeval_results.jsonl  p-mmeval_data.ipynb
(+910 files in other folders)
