[project]
name = "bench_weaver"
version = "0.0.0"
dependencies = [
    # inference
    "vllm>=v0.6.6.post1",
    "transformers>=4.50.0.dev0",
    "datasets",
    "hf_transfer",

    # pytorch
    "torch",
    "torchvision",
    "torchaudio",

    # api related
    "openai",
    "google-generativeai",

    # code from llama-factory
    "av",
    "trl",
    "peft",
    "matplotlib",
    "liger-kernel",
    "bitsandbytes",

    # yaml needed
    "pyyaml",

    # eval difficulty
    "jieba",
    "nltk",
    "konlpy",
    "langdetect",

    # eval translation Error
    "evaluate",
    # "unbabel-comet",
    "protobuf==4.25.6",
    
    # nvidia-gpu
    "nvidia-ml-py",

]
requires-python = ">=3.10"

[project.optional-dependencies]
ipy = ["ipykernel", "ipywidgets"]

[project.scripts]
bench-weaver-cli = "BenchWeaver.cli.cli:main"