[project]
name = "bench_weaver"
version = "0.0.0"
dependencies = [
    # inference
    "vllm>=0.8.2",
    "transformers>=4.50.0.dev0",
    "datasets",
    "hf_transfer",

    # pytorch
    "torch",
    "torchvision",
    "torchaudio",

    # api related
    "openai",
    "google-generativeai",

    # code from llama-factory
    "av",
    "trl",
    "peft",
    "matplotlib",
    "liger-kernel",
    "bitsandbytes",

    # yaml needed
    "pyyaml",

    # eval difficulty
    "jieba",
    "nltk",
    "konlpy",
    "langdetect",

    # eval translation Error
    "evaluate",
    "protobuf==4.25.8",
    "sentencepiece",
    
    # eval IFEval
    "immutabledict",
    "absl-py",

    # nvidia-gpu
    "nvidia-ml-py",

    # others
    "fire",
]
requires-python = ">=3.10"

[project.optional-dependencies]
ipy = ["ipykernel", "ipywidgets"]

[project.scripts]
bench-weaver-cli = "BenchWeaver.cli.cli:main"